update spring boot, hibernate, flyway, commons-lang, provide more sane config for development